# OkLabPaletteGenerator

./: .gitmodules  CMakeLists.txt  ColorUtils.h  LICENSE  Main.qml  Palette.cpp  Palette.h  PaletteView.cpp  PaletteView.h  README.md  main.cpp
